--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <!-- здесь будет календарь с расписанием -->
     </div>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
+
     <script src="script.js"></script>
   </body>
 </html>
